--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,9 @@ before_install:
     - sudo apt-get install -y libzmq-dev
 script: "sbt clean coverage test"
 after_success: "sbt coveralls"
+sudo: false
+cache:
+    apt: true
+    directories:
+        - $HOME/.ivy2/cache
 
