--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ jdk:
     - oraclejdk7
     - openjdk7
 before_install:
-    - sudo apt-get update -qq
-    - sudo apt-get remove -y libzmq3
-    - sudo apt-get install -y libzmq-dev
+    - apt-get update -qq
+    - apt-get remove -y libzmq3
+    - apt-get install -y libzmq-dev
 script: "sbt clean coverage test"
 after_success: "sbt coveralls"
 sudo: false
